Headless mode
deterministic when ran with set seed for RNG source